Adds valid offers and finished offers to homepage

--- a/config/locales/offer.pt-BR.yml
+++ b/config/locales/offer.pt-BR.yml
@@ -13,11 +13,11 @@ pt-BR:
         image: 'Imagem da oferta'
         producer: 'Produtor'
         bank_account: 'Conta bancária'
-        offer_ends_at: 'Oferta encerra em:'
+        offer_ends_at: 'Oferta encerra em'
         operational_tax: 'Taxa operacional'
         coordinator_tax: 'Taxa do coordenador'
-        offer_starts_at: 'Oferta começa em:'
-        collect_ends_at: 'Coleta termina em:'
-        collect_starts_at: 'Coleta inicia em:'
+        offer_starts_at: 'Oferta começa em'
+        collect_ends_at: 'Coleta termina em'
+        collect_starts_at: 'Coleta inicia em'
         deliver_coordinator: 'Coordenador de entrega'
         products_description: 'Descrição dos produtos'
