--- a/config/locales/purchase.pt-BR.yml
+++ b/config/locales/purchase.pt-BR.yml
@@ -9,9 +9,9 @@ pt-BR:
       purchase:
         amount: 'Quantidade'
         status: 'Status'
-        user_id: 'Usuário'
+        user: 'Usuário'
         receipt: 'Recibo'
-        offer_id: 'Oferta'
+        offer: 'Oferta'
         transaction_id: 'ID da transação'
 
   enumerations:
