--- a/config/locales/offer.pt-BR.yml
+++ b/config/locales/offer.pt-BR.yml
@@ -14,8 +14,8 @@ pt-BR:
         producer: 'Produtor'
         bank_account: 'Conta bancária'
         offer_ends_at: 'Oferta encerra em'
-        operational_tax: 'Taxa operacional'
-        coordinator_tax: 'Taxa do coordenador'
+        operational_tax: 'Taxa operacional:'
+        coordinator_tax: 'Taxa do coordenador:'
         offer_starts_at: 'Oferta começa em'
         collect_ends_at: 'Coleta termina em'
         collect_starts_at: 'Coleta inicia em'
