Adds more bank account infos to purchase#show

--- a/config/locales/bank_account.pt-BR.yml
+++ b/config/locales/bank_account.pt-BR.yml
@@ -10,5 +10,7 @@ pt-BR:
         cc: 'Conta Corrente'
         bank: 'Nome do Banco'
         agency: 'Agência'
+        cnpj_cpf: 'CPF/CNPJ'
+        owner_name: 'Nome/Razão Social'
         bank_number: 'Número do Banco'
         operation_code: 'Código da operação'
