Migrate purchases to old_purchases
This moves all actual purchases to old_purchases so this way the new payment gateway can use the Purchases Table to store the new credit card purchases (IUGU)

--- a/config/locales/old_purchase.pt-BR.yml
+++ b/config/locales/old_purchase.pt-BR.yml
@@ -1,12 +1,12 @@
 pt-BR:
   activerecord:
     models:
-      purchase:
-        one: 'Compra'
-        other: 'Compras'
+      old_purchase:
+        one: 'Compra Antiga'
+        other: 'Compras Antigas'
 
     attributes:
-      purchase:
+      old_purchase:
         amount: 'Quantidade'
         status: 'Status'
         user: 'Usuário'
