Moves PurchaseStatus to OldPurchaseStatus to avoid conflicts

--- a/config/locales/old_purchase.pt-BR.yml
+++ b/config/locales/old_purchase.pt-BR.yml
@@ -15,7 +15,7 @@ pt-BR:
         transaction_id: 'ID da transação'
 
   enumerations:
-    purchase_status:
+    old_purchase_status:
       pending: "Pendente"
       confirmed: "Confirmada"
       canceled: "Cancelada"
