Adds taxes to iugu charge process on back-end

--- a/config/locales/purchase.pt-BR.yml
+++ b/config/locales/purchase.pt-BR.yml
@@ -10,6 +10,7 @@ pt-BR:
         user: 'Usuário'
         token: 'Token'
         total: 'Total'
+        taxes: 'Taxas'
         status: 'Status'
 
   enumerations:
