Moves old purchase flow to inside new purchase flow
This includes the views, the old purchase flow, the bank transfer payment method and a lot more.

--- a/config/locales/purchase.pt-BR.yml
+++ b/config/locales/purchase.pt-BR.yml
@@ -12,6 +12,7 @@ pt-BR:
         total: 'Total'
         taxes: 'Taxas'
         status: 'Status'
+        receipt: 'Recibo'
 
   enumerations:
     purchase_status:
