Adds neighborhood to deliver coordinators

--- a/config/locales/deliver_coordinator.pt-BR.yml
+++ b/config/locales/deliver_coordinator.pt-BR.yml
@@ -13,4 +13,5 @@ pt-BR:
         email: 'Email'
         avatar: 'Avatar'
         address: 'Endereço'
+        neighborhood: 'Bairro'
         partial_address: 'Endereço Parcial'
