--- a/config/locales/user.pt-BR.yml
+++ b/config/locales/user.pt-BR.yml
@@ -13,5 +13,6 @@ pt-BR:
         email: 'Email'
         address: 'Endereço'
         password: 'Senha'
+        remember_me: 'Mantenha-me conectado'
         current_password: 'Senha atual'
         password_confirmation: 'Confirme sua senha'
