Add quantity of orders in admin/purchase show

--- a/config/locales/purchase.pt-BR.yml
+++ b/config/locales/purchase.pt-BR.yml
@@ -13,6 +13,7 @@ pt-BR:
         taxes: 'Taxas'
         status: 'Status'
         receipt: 'Recibo'
+        quantity: 'Quantidade'
 
   enumerations:
     purchase_status:
