--- a/config/locales/offer.pt-BR.yml
+++ b/config/locales/offer.pt-BR.yml
@@ -2,25 +2,24 @@ pt-BR:
   activerecord:
     models:
       offer:
-        one: 'Oferta'
-        other: 'Ofertas'
-
+        one: Oferta
+        other: Ofertas
     attributes:
       offer:
-        value: 'Preço total'
-        stock: 'Quantidade'
-        title: 'Nome da oferta'
-        image: 'Imagem da oferta'
-        producer: 'Produtor'
-        description: 'Descrição'
-        bank_account: 'Conta bancária'
-        offer_ends_at: 'Oferta encerra em'
-        operational_tax: 'TAXA OPERACIONAL (sustentabilidade da Rede)'
-        coordinator_tax: 'TAXA COORDENAÇÃO (cota coordenador de entrega)'
-        offer_starts_at: 'Oferta começa em'
-        collect_ends_at: 'Coleta termina em'
-        collect_starts_at: 'Coleta inicia em'
-        deliver_coordinator: 'Coordenador de entrega'
+        value: Preço total
+        stock: Quantidade
+        title: Nome da oferta
+        image: Imagem da oferta
+        producer: Produtor
+        description: Descrição
+        bank_account: Conta bancária
+        offer_ends_at: Oferta encerra em
+        operational_tax: TAXA OPERACIONAL (sustentabilidade da Rede)
+        coordinator_tax: TAXA COORDENAÇÃO (cota coordenador de entrega)
+        offer_starts_at: Oferta começa em
+        collect_ends_at: Coleta termina em
+        collect_starts_at: Coleta inicia em
+        deliver_coordinator: Coordenador de entrega
   offer:
-    one: '1 cota'
+    one: 1 cota
     other: '%{count} cotas'
