--- a/config/locales/offer_item.pt-BR.yml
+++ b/config/locales/offer_item.pt-BR.yml
@@ -2,22 +2,20 @@ pt-BR:
   activerecord:
     models:
       offer_item:
-        one: 'Item'
-        other: 'Items'
-
+        one: Item
+        other: Items
     attributes:
       offer_item:
-        name: 'Nome'
-        unit: 'Unidade'
-        offer: 'Oferta'
-        quantity: 'Quantidade'
-        unit_price: 'Preço unitário'
-
+        name: Nome
+        unit: Unidade
+        offer: Oferta
+        quantity: Quantidade
+        unit_price: Preço unitário
   enumerations:
     offer_item_unit:
-      kg: 'Kg'
-      bottle: 'Garrafa'
-      pack: 'Maço'
-      stem: 'Pé'
-      head: 'Cabeça'
-      unit: 'Unidade'
+      kg: Kg
+      bottle: Garrafa
+      pack: Maço
+      stem: Pé
+      head: Cabeça
+      unit: Unidade
