Redesign signup page

--- a/config/locales/user.pt-BR.yml
+++ b/config/locales/user.pt-BR.yml
@@ -6,12 +6,13 @@ pt-BR:
         other: Usuários
     attributes:
       user:
-        cpf: CPF
-        name: Nome completo
-        phone: Telefone
-        email: Email
         address: Endereço completo
-        password: Senha
-        remember_me: Mantenha-me conectado
+        cpf: Qual seu CPF?
         current_password: Senha atual
-        password_confirmation: Confirme sua senha
+        email: Qual seu e-mail?
+        name: Qual nome deve ir em notas fiscais?
+        nickname: Como prefere ser chamado?
+        password_confirmation: Sua senha novamente
+        password: Sua senha
+        phone: E celular?
+        remember_me: Mantenha-me conectado
