Apply communication experiment in other devise pages

--- a/config/locales/user.pt-BR.yml
+++ b/config/locales/user.pt-BR.yml
@@ -15,4 +15,4 @@ pt-BR:
         password_confirmation: Sua senha novamente
         password: Sua senha
         phone: E celular?
-        remember_me: Mantenha-me conectado
+        remember_me: Gravar usuário neste computador
