Use "e-mail" when using Portuguese term

--- a/config/locales/deliver_coordinator.pt-BR.yml
+++ b/config/locales/deliver_coordinator.pt-BR.yml
@@ -9,7 +9,7 @@ pt-BR:
         cpf: CPF
         name: Nome do Coordenador
         phone: Telefone
-        email: Email
+        email: E-mail
         avatar: Avatar
         address: Endereço
         neighborhood: Bairro
