--- a/config/locales/producer.pt-BR.yml
+++ b/config/locales/producer.pt-BR.yml
@@ -9,7 +9,7 @@ pt-BR:
         logo: Logotipo
         name: Nome do Produtor
         phone: Telefone
-        email: Email
+        email: E-mail
         address: Endereço
         description: Descrição
         contact_name: Nome do contato
